--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,7 +6,7 @@
       src="https://kit.fontawesome.com/22df98f19c.js"
       crossorigin="anonymous"
     ></script>
-    <title>Pair Yo` Pet</title>
+    <title>Title</title>
   </head>
   <body>
     <div id="root"></div>
