--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/22df98f19c.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>DOT</title>
   </head>
   <body>
     <div id="root"></div>
