Remove default padding on dropdown hamburger

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -13,6 +13,10 @@
       src="https://kit.fontawesome.com/22df98f19c.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/22df98f19c.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Dx & Outcome Testing</title>
   </head>
   <body>
