Add meta og tags

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -18,6 +18,20 @@
       crossorigin="anonymous"
     ></script>
     <title>Dx & Outcome Testing</title>
+    <meta property="og:title" content="eDOT" />
+    <meta property="og:website" content="website" />
+    <meta property="og:url" content="https://edot.herokuapp.com/" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://dot-aws.s3-us-west-1.amazonaws.com/edot-preview-small.png"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Electronic diagnostic and outcome testing for therapists and other helping professionals."
+    />
+    <meta name="author" content="Zachary Duvall" />
   </head>
   <body>
     <div id="root"></div>
