Update OG meta tag description

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -29,7 +29,7 @@
     <meta
       name="description"
       property="og:description"
-      content="Electronic diagnostic and outcome testing for therapists and other helping professionals."
+      content="Electronic Diagnostic & Outcome Testing for therapists & other helping professionals."
     />
     <meta name="author" content="Zachary Duvall" />
   </head>
